# llm-assesment

./: PROMPT_EXPERIMENTS.md  PROMPT_RESPONSES.md  RAG_System_Prompts_Collection.postman_collection.json  README.md  main.py  pyproject.toml  upload_documents.py
src/: main.py
src/ingestion/: pipeline.py
src/retrieval/: __init__.py  prompts.py  rag_chain.py
